kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobberman-api
  namespace: jobberman
spec:
  selector:
    app: jobberman-api
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
